methods of getting tags were added to TaskUIController

--- a/resources/view/task.html
+++ b/resources/view/task.html
@@ -4,6 +4,8 @@
 <!--/*@thymesVar id="fragment" type="boolean"*/-->
 <!--/*@thymesVar id="comments" type="java.util.List<com.javarush.jira.bugtracking.task.to.ActivityTo>"*/-->
 <!--/*@thymesVar id="activities" type="java.util.List<com.javarush.jira.bugtracking.task.to.ActivityTo>"*/-->
+<!--/*@thymesVar id="tags" type="java.util.List<com.javarush.jira.bugtracking.task.to.TagTo>"*/-->
+
 
 <th:block th:replace="~{layout/bugtrackLayout::view(${task}, '/ui/tasks/edit/', ~{::task}, ${fragment})}">
     <task>
